Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81762

Failed to build on OpenWrt

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.12.8, 5.14.2, 5.15.0 Alpha
    • 5.12.4, 5.12.6, 5.13.0, 5.13.1, 5.13.2, 5.14.1
    • Network: SSL
    • None
    • Ubuntu 18.04 / OpenWrt 18.06 both with OpenSSL1.1.1
      GCC version: 8.3.0
      Arch: x86_64
    • Linux/Other display system
    • e5408b62bdcee1abbc595eb581abcb540396ca4c (qt/qtbase/5.14) 0cf046cc7cc84ba822f43183f162989b2c078913 (qt/qtbase/5.12)

      System: Ubuntu 18.04 LTS x86_64 with OpenSSL1.1.1

      GCC version: 8.3.0

      Build for OpenWrt 18.06 x86_64 with OpenSSL1.1.1d

      And get the following error info:

      ssl/qsslsocket_openssl_symbols.cpp: In function 'bool q_resolveOpenSslSymbols()':
      ssl/qsslsocket_openssl_symbols.cpp:603:11: error: '_q_SSL_set_alpn_protos' was not declared in this scope
       if (!(_q_##func = _q_PTR_##func(libs.first->resolve(#func))) \
       ^~~
      ssl/qsslsocket_openssl_symbols.cpp:1345:5: note: in expansion of macro 'RESOLVEFUNC'
       RESOLVEFUNC(SSL_set_alpn_protos)
       ^~~~~~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:603:11: note: suggested alternative: 'SSL_set_alpn_protos'
       if (!(_q_##func = _q_PTR_##func(libs.first->resolve(#func))) \
       ^~~
      ssl/qsslsocket_openssl_symbols.cpp:1345:5: note: in expansion of macro 'RESOLVEFUNC'
       RESOLVEFUNC(SSL_set_alpn_protos)
       ^~~~~~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:603:23: error: '_q_PTR_SSL_set_alpn_protos' was not declared in this scope
       if (!(_q_##func = _q_PTR_##func(libs.first->resolve(#func))) \
       ^~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:1345:5: note: in expansion of macro 'RESOLVEFUNC'
       RESOLVEFUNC(SSL_set_alpn_protos)
       ^~~~~~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:603:23: note: suggested alternative: 'SSL_set_alpn_protos'
       if (!(_q_##func = _q_PTR_##func(libs.first->resolve(#func))) \
       ^~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:1345:5: note: in expansion of macro 'RESOLVEFUNC'
       RESOLVEFUNC(SSL_set_alpn_protos)
       ^~~~~~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:603:11: error: '_q_SSL_CTX_set_alpn_select_cb' was not declared in this scope
       if (!(_q_##func = _q_PTR_##func(libs.first->resolve(#func))) \
       ^~~
      ssl/qsslsocket_openssl_symbols.cpp:1346:5: note: in expansion of macro 'RESOLVEFUNC'
       RESOLVEFUNC(SSL_CTX_set_alpn_select_cb)
       ^~~~~~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:603:11: note: suggested alternative: 'SSL_CTX_set_alpn_select_cb'
       if (!(_q_##func = _q_PTR_##func(libs.first->resolve(#func))) \
       ^~~
      ssl/qsslsocket_openssl_symbols.cpp:1346:5: note: in expansion of macro 'RESOLVEFUNC'
       RESOLVEFUNC(SSL_CTX_set_alpn_select_cb)
       ^~~~~~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:603:23: error: '_q_PTR_SSL_CTX_set_alpn_select_cb' was not declared in this scope
       if (!(_q_##func = _q_PTR_##func(libs.first->resolve(#func))) \
       ^~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:1346:5: note: in expansion of macro 'RESOLVEFUNC'
       RESOLVEFUNC(SSL_CTX_set_alpn_select_cb)
       ^~~~~~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:603:23: note: suggested alternative: 'SSL_CTX_set_alpn_select_cb'
       if (!(_q_##func = _q_PTR_##func(libs.first->resolve(#func))) \
       ^~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:1346:5: note: in expansion of macro 'RESOLVEFUNC'
       RESOLVEFUNC(SSL_CTX_set_alpn_select_cb)
       ^~~~~~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:603:11: error: '_q_SSL_get0_alpn_selected' was not declared in this scope
       if (!(_q_##func = _q_PTR_##func(libs.first->resolve(#func))) \
       ^~~
      ssl/qsslsocket_openssl_symbols.cpp:1347:5: note: in expansion of macro 'RESOLVEFUNC'
       RESOLVEFUNC(SSL_get0_alpn_selected)
       ^~~~~~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:603:11: note: suggested alternative: 'SSL_get0_alpn_selected'
       if (!(_q_##func = _q_PTR_##func(libs.first->resolve(#func))) \
       ^~~
      ssl/qsslsocket_openssl_symbols.cpp:1347:5: note: in expansion of macro 'RESOLVEFUNC'
       RESOLVEFUNC(SSL_get0_alpn_selected)
       ^~~~~~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:603:23: error: '_q_PTR_SSL_get0_alpn_selected' was not declared in this scope
       if (!(_q_##func = _q_PTR_##func(libs.first->resolve(#func))) \
       ^~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:1347:5: note: in expansion of macro 'RESOLVEFUNC'
       RESOLVEFUNC(SSL_get0_alpn_selected)
       ^~~~~~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:603:23: note: suggested alternative: 'SSL_get0_alpn_selected'
       if (!(_q_##func = _q_PTR_##func(libs.first->resolve(#func))) \
       ^~~~~~~
      ssl/qsslsocket_openssl_symbols.cpp:1347:5: note: in expansion of macro 'RESOLVEFUNC'
       RESOLVEFUNC(SSL_get0_alpn_selected)
       ^~~~~~~~~~~
      Makefile:26050: recipe for target '.obj/qsslsocket_openssl_symbols.o' failed
      make[6]: *** [.obj/qsslsocket_openssl_symbols.o] Error 1

      Configure args:

      ./configure -prefix /usr -extprefix $(TOOLCHAIN_DIR) -sysroot $(TOOLCHAIN_DIR) -plugindir /usr/lib/Qt/plugins -xplatform linux-openwrt-g++ -opensource -confirm-license -force-asserts -no-iconv -no-pch -no-rpath -no-strip -no-cups -no-dbus -no-eglfs -no-kms -no-opengl -no-directfb -no-xcb -qt-zlib -qt-freetype -make libs -nomake examples -nomake tests -skip qtdeclarative -skip qtmultimedia -skip activeqt -skip qtdoc -skip qtconnectivity -skip wayland -skip qtscript -sql-mysql -I$(STAGING_DIR)/usr/include/mysql -L$(STAGING_DIR)/usr/lib -v

      Makefile:

      https://github.com/project-openwrt/qt5-openwrt/blob/master/libs/qt5/Makefile

      (I've changed the arg "-no-ssl" into "-openssl-runtime")

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cnn Qt Core & Network
            1715173329 CN SZTL
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes